--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@ throttlingtime=10000
       <artifactId>camel-spring-boot-starter</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
