--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.config=classpath:logback.xml
 camel.springboot.name=Throttler
 
 
-from.endpoint=https://jsonplaceholder.typicode.com/posts
-to.endpoint=https://jsonplaceholder.typicode.com/posts
+from.endpoint=jetty:https://jsonplaceholder.typicode.com/posts
+to.endpoint=jetty:https://jsonplaceholder.typicode.com/posts
 throttle=20
 throttlingtime=10000
 
