--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,10 @@ logging.config=classpath:logback.xml
 camel.springboot.name=Throttler
 
 
-from.endpoint=jetty:https://jsonplaceholder.typicode.com/posts
-to.endpoint=jetty:https://jsonplaceholder.typicode.com/posts
+from.endpoint=jetty:http://0.0.0.0:8080/test?matchOnUriPrefix=true
+to.endpoint=http://requestbin.fullcontact.com/185r4n81?bridgeEndpoint=true
 throttle=20
 throttlingtime=10000
-
-
-
 
 # lets listen on all ports to ensure we can be invoked from the pod IP
 server.address=0.0.0.0
