--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ camel.springboot.name=Throttler
 
 
 from.endpoint=jetty:http://0.0.0.0:8090/test?matchOnUriPrefix=true
-to.endpoint=http://requestbin.fullcontact.com/185r4n81?bridgeEndpoint=true
-throttle=20
+to.endpoint=http://beers-beer-component.apiman.project.local/api/beer/?bridgeEndpoint=true
+throttle=10
 throttlingtime=10000
 
 # lets listen on all ports to ensure we can be invoked from the pod IP
